# reencoder

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  go.mod  go.sum
.github/workflows/: main.yml  release.yml
cmd/: cmd.go  init.go
files/: database.go  index.go  operations.go  types.go
samples/: 16bit.flac  24bit.flac  32bit.flac
src/: db.rs  files.rs  flac.rs  main.rs
src/flac/: decoder.rs  mod.rs
