[package]
name = "flac-reencoder"
version = "0.2.5"
edition = "2024"
repository = "https://github.com/justjakka/reencoder/"
license = "BSD-3-Clause"
authors = ["jakka"]
description = "A tool for keeping your flacs up-to-date"
categories = ["command-line-utilities"]
keywords = ["flac", "audio"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["cargo", "help", "std"] }
clap_complete = "4.5.54"
directories = "6.0.0"
flac-bound = { version = "0.5.0", default-features = false }
indicatif = { version = "0.18.0", features = ["improved_unicode"] }
walkdir = "2.5.0"
console = { version = "0.15.11", features = ["windows-console-colors"] }
claxon = { git = "https://github.com/justjakka/claxon.git" }
metaflac = "0.2.8"
rayon = "1.10.0"
rusqlite = { version = "0.36.0", default-features = false, features = [
    "modern_sqlite",
] }
ctrlc = "3.4.7"

[features]
default = ["bundled"]
bundled = ["rusqlite/bundled", "flac-bound/libflac-noogg"]
linked = ["flac-bound/libflac-nobuild"]

[dev-dependencies]
flac-bound = { version = "0.5.0", default-features = false, features = [
    "libflac-nobuild",
] }

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.36.0", default-features = false, features = [
    "bundled-windows",
] }
flac-bound = { version = "0.5.0", default-features = false, features = [
    "libflac-noogg",
] }
