[package]
name = "flac-reencoder"
version = "0.3.3"
edition = "2024"
repository = "https://github.com/doujincafe/reencoder/"
license = "BSD-3-Clause"
authors = ["jakka"]
description = "tool to keep your flacs reencoded"
categories = ["command-line-utilities"]
keywords = ["flac", "audio"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["cargo", "help", "std"] }
clap_complete = "4.5.54"
directories = "6.0.0"
flac-bound = { version = "0.5.0", default-features = false, features = [
  "libflac-noogg",
] }
indicatif = { version = "0.18.0", features = ["improved_unicode"] }
walkdir = "2.5.0"
console = { version = "0.16.0", features = ["windows-console-colors"] }
ctrlc = "3.4.7"
flac-codec = { version = "1.2.0" }
turso = "0.2.2"
macro_rules_attribute = "0.2.2"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt", "rt-multi-thread"] }
